--- a/index1.html
+++ b/index1.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>给csf的圣诞礼物</title>
-    <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-    <link type="gift/text/css" href="./css/style1.css" rel="stylesheet" />
+    <script type="/gift/text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+    <link type="/gift/text/css" href="./css/style1.css" rel="stylesheet" />
     <style>
         html,
         body {
